--- a/style.css
+++ b/style.css
@@ -64,3 +64,113 @@ font-style: italic;
     padding: 8px 10px;
     border-radius: 7px;
 }
+/* combo offer start here */
+.combo-offer{
+    background-color:whitesmoke ;
+    
+}
+ .combo-offer {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    width: 900px;
+    padding: 30px;
+    text-align: center;
+    margin: 50px auto 0px auto;
+  }
+  .combo-offer h1 {
+    font-size: 40px;
+    font-weight: bolder;
+    margin-bottom: 11px;
+  }
+    .combo-box {
+    margin: 80px 0px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .combo-text{
+  
+    padding: 45px;
+
+    border-radius: 6px;
+    background-color: #D3D3D3;
+  }
+  .active-color {
+    background-color: rgba(240, 145, 131, 0.3);
+    border: 3px solid #ff5b40;
+  }
+
+ .combo-input-field {
+    width: 760px;
+    text-align: center;
+    margin: 40px auto;
+  }
+   #combo-input-field {
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+    border: none;
+    border-bottom: 1px solid rgb(203, 202, 202);
+  }
+  .combo-btn  {
+    margin: 15px 0px;
+    display: inline-block;
+    background-image: linear-gradient(red,orangered);
+    padding: 10px 10px;
+    border-radius: 7px;
+    text-decoration: none;
+    color: white;
+
+  }
+  /* chicken fry */
+  .chicken{
+    display: flex;
+    background-color: white;
+    text-align: center;
+
+}
+.chicken-text{
+    text-align: center;
+    padding-top: 100px;
+    font-weight: 400px;
+    font-size: 30px;
+    color: #ff5b40;
+}
+
+.fry{
+    text-decoration: none;
+    
+    color: whitesmoke;
+    font-weight: 700;
+    font-size: 25px;
+    display: inline-block;
+    background-color: orange;
+    padding: 8px 10px;
+    border-radius: 7px;
+   
+}
+/* footer */
+
+ footer {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 15px;
+    margin-bottom: 0px;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000;
+    color: black;
+  
+    
+  }
+  footer h2 {
+ font-style: italic;
+    margin: 15px 0px 10px;
+    color: #f96c43;
+  }
+  footer small {
+    padding: 3px;
+    color: white;
+    margin: 2px 0px 20px 0px;
+  }
